--- a/static_devconnect/styles/global.css
+++ b/static_devconnect/styles/global.css
@@ -156,6 +156,13 @@ h1 {
     border-radius: 50%;
 }
 
+.foto-perfil2{
+    width: 90px;
+    height: 90px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
+}
 
 
 
