--- a/static_devconnect/styles/feed.css
+++ b/static_devconnect/styles/feed.css
@@ -7,14 +7,15 @@ main {
 }
 
 .container-flex-publi {
-  background-color: rgb(249, 246, 249);
- /* height: 700px;*/
+  background-color: blueviolet;
+  /* height: 700px; */
   width: 90%;
   max-width: 900px;
-  display: flex; /*ativa o flex*/
-  flex-direction: column; /*muda a direcao do flex*/
+  display: flex;
+  /*ativa o flex*/
+  flex-direction: column;
+  /*muda a direção do flex*/
   gap: 30px;
-
 }
 
 #storys {
@@ -27,7 +28,7 @@ main {
   gap: 30px;
 }
 
-#storys::-webkit-scrollbar{
+#storys::-webkit-scrollbar {
   width: 0;
 }
 
@@ -38,17 +39,16 @@ main {
 .card-story>button {
   background-color: transparent;
   border: none;
-  /* text-decoration: none; */ /*SÓ PARA QUEM ESTÁ COM A TAG <a>*/
+  /* text-decoration: none; */
+  /*SÓ PARA QUEM ESTÁ COM A TAG <a>*/
 
   font-size: var(--tamanho-fonte-sm);
-  color:var(#9938b7);
+  color: var(--cor-preto);
 
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5px;
-
-  
 }
 
 .card-story>button>img {
@@ -60,139 +60,125 @@ main {
 }
 
 /* seção criar publi */
-.formulario-botao-roxa{
+.formulario-botao-azul {
   width: 135px;
 }
 
-#criar-publi{
+#criar-publi {
   padding: 10px;
 }
 
-#criar-publi>h2{
-  color:var(--cor-preto);
+#criar-publi>h2 {
+  color: var(--cor-cinza-escuro2);
   font-size: var(--tamanho-fonte-lg);
   font-weight: 700;
   margin-bottom: 30px;
-
 }
 
-#criar-publi > form > textarea{
-    width: 100%;
-    height: 80px;
-    padding: 10px;
-    resize: none; /*desabilita a redimensao do tamnho do elemento*/
-    border: var(--borda);
+#criar-publi>form>textarea {
+  width: 100%;
+  height: 80px;
+  padding: 10px;
+  resize: none;
+  /*desabilita a redimensão do tamanho do elemento*/
+  border: var(--borda);
 
-    color: black;
-    font-family: var(--tamanho-fonte-sm);
-
+  color: var(--cor-preto);
+  font-size: var(--tamanho-fonte-sm);
 }
 
-#criar-publi > form > textarea::placeholder{
-  color: var(--cor-cinza-escuro1);
+#criar-publi>form>textarea::placeholder {
+  color: var(--cor-cinza-medio);
 }
 
-#criar-publi > form{
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-
-}
-
-#criar-publi>form>footer{
+#criar-publi>form>footer {
   margin-top: 30px;
   display: flex;
   justify-content: flex-end;
   gap: 15px;
-
 }
 
-/*secao publicacoes*/
-#publicacoes{
-  background-color: darkgrey;
+/* seção publicações */
+#publicacoes {
+  background-color: chocolate;
   width: 100%;
-  /*height: 600%;*/
 }
 
-.card-publi{
+.card-publi {
   background-color: var(--cor-branco);
   width: 100%;
-  height: 600px;
+  /* height: 600px; */
 }
 
-.card-publi > header{
+.card-publi>header {
   padding: 15px;
-
 }
 
-.card-publi > header > a{
+.card-publi>header>a {
   display: flex;
   align-items: center;
+  /*alinha no sentindo contrario do flex*/
   column-gap: 10px;
   text-decoration: none;
-  color: black;
+  color: var(--cor-preto);
   text-transform: lowercase;
-
 }
 
-.card-publi>figure{
+.card-publi>figure {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
 }
 
-
-.imagem-publicacao{
-  object-fit: cover;/*redimensiona a imgagem*/
+.imagem-publicacao {
+  object-fit: cover;
+  /*redimensiona a imagem*/
   object-position: center;
   width: 100%;
   height: 350px;
-
 }
 
-.card-publi>figure>figcaption{
+.card-publi>figure>figcaption {
   color: var(--cor-preto);
   font-size: var(--tamanho-fonte-md);
   font-weight: 500;
-  display: flex; /*por padrao o flexbox deixa os elementos em linha*/
+  display: flex;
+  /*por padrão o flexbox deixa os elementos em linha*/
   align-items: center;
   column-gap: 5px;
   order: 2;
   margin: 15px;
-
 }
 
-.descricao-publicacao{
+.descricao-publicacao {
   font-size: var(--tamanho-fonte-sm);
   font-weight: 400;
 }
 
-.interacoes-publicacao{
+.interacoes-publicacao {
   display: flex;
-  width: 95px;
+  width: 88px;
   flex-wrap: wrap;
- /* justify-content: space-between;*/
-  /*gap*/
-  column-gap: 15px;
+  justify-content: space-between;
+  /* gap */
   order: 1;
   margin-left: 15px;
   margin-top: 15px;
 }
 
-.interacoes-publicacao> button{
+.interacoes-publicacao>button {
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
-.card-publi> figure > button{
+.card-publi>figure>button{
   background-color: transparent;
   border: none;
 
-  color: var(--cor-cinza-escuro1);
+  color: var(--cor-cinza-medio);
   font-size: var(--tamanho-fonte-sm);
 
   order: 3;
 
   margin-left: 15px;
-  align-items: flex-start;
 }
